resilient/tests/snapshots/diagnostics_snapshots__parser_let_missing_identifier@parser_let_missing_identifier.snap
---
source: tests/diagnostics_snapshots.rs
description: "fn main(int _d) { let = 1; return 0; } main(0);\n"
expression: output
---
Parser error: 1:23: Expected identifier after 'let', found `=`
1:23: Expected identifier after 'let', found `=`
Parser error: Expected identifier after 'let', found `=`
   fn main(int _d) { let = 1; return 0; } main(0);
                         ^
Error: Failed to parse program: 1 parser error(s)
